add new data files and update table of contents; implement plotting scripts

--- a/.binder/Tutorial2.ipynb
+++ b/.binder/Tutorial2.ipynb
@@ -43,6 +43,43 @@
     "- Why? and how would you modify the cruise plan?\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a83d8a6",
+   "metadata": {},
+   "source": [
+    "# Tutorial 2\n",
+    "\n",
+    "\n",
+    "<div class=\"alert alert-block alert-info\"> \n",
+    "<b>Note:</b> This guide is specific to students who are enrolled at Utrecht University.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9442f70",
+   "metadata": {},
+   "source": [
+    "## Analysing CTD Transect Data\n",
+    "\n",
+    "\n",
+    "As a reminder, you have previously conducted an sea-going expedition along a transect in the North West Shelf region, collecting CTD data at various stations from the Norwegian Sea down to the coast of the Netherlands:\n",
+    "\n",
+    "![image.png](snapshot1.png)\n",
+    "\n",
+    "\n",
+    "In this tutorial, you will analyze the collected CTD data to visualize and interpret the vertical profiles of different oceanographic parameters along the transect. Please follow the steps below:\n",
+    "\n",
+    "1. Open the `CTD_transects.ipynb` notebook in JupyterLab (you can find this on the left sidebar in the file explorer).\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d2bcd11",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
