--- a/CTD_transects.ipynb
+++ b/CTD_transects.ipynb
@@ -57,7 +57,7 @@
     "\n",
     "#### Data directory\n",
     "\n",
-    "Next, you should set `data_dir` to be the path to your expedition results in the code block below. You should replace `\"/path/to/EXPEDITION/results/\"` with the path for your machine.\n",
+    "Next, you should set `data_dir` to be the path to your expedition results in the code block below. You can do by setting `GROUP_NAME` to be your group name.\n",
     "\n",
     "<div class=\"alert alert-block alert-success\"> \n",
     "<b>Tip:</b> You can get the path to your expedition results by navigating to the `results` folder in Terminal (using `cd`) and then using the `pwd` command. This will print your working directory which you can copy to the `data_dir` variable in this notebook. Don't forget to keep it as a string (in \"quotation\" marks)!\n",
@@ -72,7 +72,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = \"/path/to/EXPEDITION/results/\"  # set this to be where your expedition output data is located on your (virtual) machine"
+    "GROUP_NAME = \"GROUP1\"  # set this to be your group name\n",
+    "\n",
+    "data_dir = f\"data/{GROUP_NAME}/results/\"  # this will set the data_dir path to be where your group's expedition output data is located on your (virtual) machine"
    ]
   },
   {
