further updates to tutorial/notebooks

--- a/CTD_transects.ipynb
+++ b/CTD_transects.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "c7f9f2ee",
    "metadata": {},
    "outputs": [],
@@ -67,12 +67,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "cf497101",
    "metadata": {},
    "outputs": [],
    "source": [
-    "GROUP_NAME = \"GROUP3\"  # set this to be your group name\n",
+    "GROUP_NAME = \"GROUP1\"  # set this to be your group name\n",
     "\n",
     "data_dir = f\"data/{GROUP_NAME}/results/\"  # this will set the data_dir path to be where your group's expedition output data is located on your (virtual) machine"
    ]
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 54,
    "id": "8de8b4ae",
    "metadata": {},
    "outputs": [],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 55,
    "id": "b32d2730",
    "metadata": {},
    "outputs": [],
@@ -159,7 +159,7 @@
     "        \"ds_name\": \"po4\",\n",
     "    },\n",
     "    \"ph\": {\n",
-    "        \"cmap\": cmo.balance,\n",
+    "        \"cmap\": cmo.deep,\n",
     "        \"label\": \"pH\",\n",
     "        \"ds_name\": \"ph\",\n",
     "    },\n",
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 56,
    "id": "13f4664b",
    "metadata": {},
    "outputs": [],
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 57,
    "id": "785b2b35",
    "metadata": {},
    "outputs": [],
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 58,
    "id": "f59824a1",
    "metadata": {},
    "outputs": [],
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 59,
    "id": "ce83c3b9",
    "metadata": {},
    "outputs": [
@@ -425,13 +425,13 @@
     "We can also also plot a 'filled' version without the distance bins, to give an alternative view of the evolution across the transect which is not dominated by gaps and white space. This time we will also add a 'sea bed' to the plot.\n",
     "\n",
     "<div class=\"alert alert-block alert-info\"> \n",
-    "<b>Note:</b> It is important to remember that the gaps do actually exist in reality and this is a caveat which must be considered when interpreting the transect derived from CTD casts. Indeed, if you look at the x-axis of the plot below you will see that the deployments are not necessarily regularly spaced and some gaps are larger than others.\n",
+    "<b>Note:</b> It is important to remember that the gaps do actually exist in reality and this is a caveat which must be considered when interpreting the transect derived from CTD casts. Indeed, if you look at the x-axis of the plot below you will see that the deployments are not necessarily regularly spaced and some gaps are larger than others in kilometer terms.\n",
     "</div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 60,
    "id": "fcf8a137",
    "metadata": {},
    "outputs": [
@@ -476,6 +476,14 @@
     "plt.colorbar(mesh, ax=ax, label=VARIABLES[plot_variable][\"label\"])\n",
     "plt.tight_layout()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a37cb826",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
