--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -30,11 +30,9 @@
     "\n",
     "2. When you finish running the notebook you will see plots representing the vertical profiles of the various variables across the the transect (remember, you have to set the variable you want to view yourself!). Analyse these plots and answer the reflect on the following questions:\n",
     "\n",
-    "   - **General Observations**: Explain why the data is available at different depths throughout the expedition.\n",
-    "        - HINT: have a look at this [view](https://data.marine.copernicus.eu/viewer/expert?view=viewer&crs=epsg%3A4326&t=1763208000000&z=0&center=2.2383852806576665%2C54.68362679433201&zoom=12.885623504987896&layers=H4sIAEQtF2kAAxXNuw6CMBQA0H_5M2hBBsOGxAcJESMuxJib2l4oSaGEdgAJ.66uZznPBYxTNKbGjNJCvKweaD7TmEmI4ZwXhyTH5JrkVZmVp_J_TJPygbdLhYwFyMJoKzrqLHZGYqMNDmpG3tcC2Ybtd5IatI67VmDIwjAIfJ8m5.tv7tS8lTQ4ZcCDT9ZLmiAOmAft.0Ud.VibphRcE8Q115bW1xf_UqbErQAAAA--&basemap=dark) of the European North West Shelf. What's it showing?\n",
+    "   - **General Observations**: Explain why the data is available at different depths throughout the expedition. (HINT: have a look at this [view](https://data.marine.copernicus.eu/viewer/expert?view=viewer&crs=epsg%3A4326&t=1763208000000&z=0&center=2.2383852806576665%2C54.68362679433201&zoom=12.885623504987896&layers=H4sIAEQtF2kAAxXNuw6CMBQA0H_5M2hBBsOGxAcJESMuxJib2l4oSaGEdgAJ.66uZznPBYxTNKbGjNJCvKweaD7TmEmI4ZwXhyTH5JrkVZmVp_J_TJPygbdLhYwFyMJoKzrqLHZGYqMNDmpG3tcC2Ybtd5IatI67VmDIwjAIfJ8m5.tv7tS8lTQ4ZcCDT9ZLmiAOmAft.0Ud.VibphRcE8Q115bW1xf_UqbErQAAAA--&basemap=dark) of the European North West Shelf. What's it showing?)\n",
     "\n",
-    "   - **Temperature**: Are there any notable temperature variations across depth and along transect?\n",
-    "        - Are there temperatures that stand out? For example, temperatures below 0 degrees?\n",
+    "   - **Temperature**: Are there any notable temperature variations across depth and along transect? Are there temperatures that stand out? For example, temperatures below 0 degrees?\n",
     "\n",
     "   - **Salinity**: Describe how salinity changes along the transect, particularly near coastal areas. Why would salinity change closer to land?\n",
     "\n",
